<?xml version="1.0"?>
<package format="2">
  <name>hector_software_monitor</name>
  <version>0.0.0</version>
  <description>The hector_software_monitor package contains diagnostic analyzers and helper nodes</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jonathan.lichtenfeld@stud.tu-darmstadt.de">jonathan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>diagnostic_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <diagnostic_aggregator plugin="${prefix}/analyzer_plugins.xml" />
  </export>

</package>
